# IC3-

./: .gitignore  CMakeLists.txt  IC3.cpp  IC3.h  Model.cpp  Model.h  README.md  TernaryTree.cpp  TernaryTree.h  main.cpp
